fixed login spacings

--- a/reactclient/src/components/CSS/Login.css
+++ b/reactclient/src/components/CSS/Login.css
@@ -21,8 +21,8 @@ body {
 }
 
 .form-signin {
-  width: 60%;
-  max-width: 100%;
+  width: 40%;
+  max-width: 60%;
   padding-left: 5%;
   padding-right: 5%;
   margin: auto;
